--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>2.22.0</version>
             <scope>test</scope>
 	</dependency>
+
+	<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 	
         <dependency>
             <groupId>org.springframework.boot</groupId>
